add volunteer and education sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <td width="150px" align="center">Communication</td>
                         <td width="150px" align="center">Strategic Planning</td>
                         <td width="150px" align="center">Self-Directed Study</td>
-                        <td width="150px" align="center">Education/Mentorship</td>
+                        <td width="150px" align="center"><a href="#volunteer">Education/Mentorship</a></td>
                     </tr>
                 </table>
             </article>
@@ -64,6 +64,7 @@
             <article id="corporate">
                 <h3>Cedarhurst Corporate Office, St. Louis, Missouri January 2021 - August 2021</h3>
                 <h4>Marketing Intern</h4>
+                <p>Program and project management across all aspects of marketing for the corporate operations.</p>
                 <ul>
                     <li>Analyzed and applied relevant information to determine current and future marketing communication strategies.</li>
                     <li>Partnered in creation and development of public relations and media projects including web design, advertisements, and content creation resulting in increased lead generation. </li>
@@ -73,6 +74,32 @@
                 </ul>
             </article>
         </section>
+        <section id="volunteer">
+            <h2>VOLUNTEER EXPERIENCE</h2>
+            <article>
+                <h3>Freedom Indoor Percussion, St. Charles, MO Novemeber 2016 - Present<h3>  
+                    <aside><em>501 C Non-Profit Youth Organization</em></aside> 
+                <h4>Battery Caption Head, Composer, Arranger</h4>
+                <p>Oversee marching percussion group focused on excellence for organization consisting of 40 youths (ages 15-22).  </p>     
+                <ul>
+                    <li>Create and implement cohesive instructional framework.</li>
+                    <li>Manage, train, and discipline team consisting of 8+ instructors to motivate students and achieve success in a highly competitive environment. </li>
+                    <li>Develop instructional strategies to create comprehensive teaching plans.</li>
+                    <li>Schedule instructional activities to maximize available practice time.</li>
+                </ul>                    
+            </article>
+        </section>
+        <section id="education">
+            <h2>EDUCATION</h2>
+            <article>
+                <h4>Bachelor of Science, Digital Marketing</h4>
+                <p>Lindenwood University, St. Charles, Missouri <br> <em> Summa Cum Laude, Deans' List</em></p>
+                <h4>Associate in Arts - General Studies</h4>
+                <p>St. Louis Community College, St. Louis, Missouri <br><em>Academic Honors and Deans List</em></p>
+            </article>
+        </section>
+        
+        
     </main>
     <footer></footer>
 </body>
