--- a/index.html
+++ b/index.html
@@ -5,40 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <header align="center">
-        <section>
+    <header>
+        <section id="info">
         Christopher Cablish<br>
         147 Deane Court<br>
         Sunset Hills, MO 63127<br>
         314-610-2709<br>
         chriscablish@hotmail.com<br>
-        <img src="./img/profpic .jpg" alt="A headshot of Chris." width="200px">
+        <img id='headshot' src="./img/profpic .jpg" alt="A headshot of Chris." width="200px">
         </section>
     </header>
     <main>
-        <section align="center">
+        <section>
             <article>
                 <h2>FACILITIES OPERATIONS/MAINTENANCE SPECIALIST</h2>
-                <p>Over seven years’ experience across plant maintenance operations providing exceptional service for assisted living residents and family members. Recognized for ability to work independently, prioritize projects, solve problems, and meet deadlines. Recent college graduate who successfully completed seven-month internship and received an outstanding review by Vice President of Marketing and Communications.  Exceptional written, oral, and interpersonal communication skills. Highly proficient with digital technology and self-motivated to learn new software/platforms when required. </p>
+                <p class="overview">Over seven years’ experience across plant maintenance operations providing exceptional service for assisted living residents and family members. Recognized for ability to work independently, prioritize projects, solve problems, and meet deadlines. Recent college graduate who successfully completed seven-month internship and received an outstanding review by Vice President of Marketing and Communications.  Exceptional written, oral, and interpersonal communication skills. Highly proficient with digital technology and self-motivated to learn new software/platforms when required. </p>
             </article>
         </section>
         <section>
-            <article align="center">
+            <article>
                 <h2>KEY COMPETENCIES</h2>
                 <table border="1px" align="center">
                     <tr>
-                        <td width="150px" align="center">Leadership</td>
-                        <td width="150px" align="center">Problem Solving</td>
-                        <td width="150px" align="center">Project Management</td>
-                        <td width="150px" align="center">Organization</td>
+                        <td >Leadership</td>
+                        <td >Problem Solving</td>
+                        <td >Project Management</td>
+                        <td w>Organization</td>
                     </tr>
                     <tr>
-                        <td width="150px" align="center">Communication</td>
-                        <td width="150px" align="center">Strategic Planning</td>
-                        <td width="150px" align="center">Self-Directed Study</td>
-                        <td width="150px" align="center"><a href="#volunteer">Education/Mentorship</a></td>
+                        <td>Communication</td>
+                        <td>Strategic Planning</td>
+                        <td>Self-Directed Study</td>
+                        <td><a href="#volunteer">Education/Mentorship</a></td>
                     </tr>
                 </table>
             </article>
@@ -48,6 +49,9 @@
             <article id="Tesson">
                 <h3>Cedarhurst of Tesson Heights Senior Living, St. Louis, MO June 2014 - Present</h3>
                 <h4>Environmental Services Coordinator</h4>
+                <p class="overview">
+                    Utilize a holistic approach to problem solving in order to maintain a safe, comfortable, and aesthetically pleasing senior living community. 
+                </p>
                 <ul>
                     <li>Conduct regular walkthroughs ensuring the ongoing repair and maintenance of the interior and exterior of the facility resulting in a clean, safe, and welcoming environment for residents and visitors </li>
                     <li>Anticipate special circumstances related to refurbishment, improvement, and construction within the facility.</li>
@@ -64,7 +68,7 @@
             <article id="corporate">
                 <h3>Cedarhurst Corporate Office, St. Louis, Missouri January 2021 - August 2021</h3>
                 <h4>Marketing Intern</h4>
-                <p>Program and project management across all aspects of marketing for the corporate operations.</p>
+                <p class="overview">Program and project management across all aspects of marketing for the corporate operations.</p>
                 <ul>
                     <li>Analyzed and applied relevant information to determine current and future marketing communication strategies.</li>
                     <li>Partnered in creation and development of public relations and media projects including web design, advertisements, and content creation resulting in increased lead generation. </li>
@@ -80,7 +84,7 @@
                 <h3>Freedom Indoor Percussion, St. Charles, MO Novemeber 2016 - Present<h3>  
                     <aside><em>501 C Non-Profit Youth Organization</em></aside> 
                 <h4>Battery Caption Head, Composer, Arranger</h4>
-                <p>Oversee marching percussion group focused on excellence for organization consisting of 40 youths (ages 15-22).  </p>     
+                <p class="overview">Oversee marching percussion group focused on excellence for organization consisting of 40 youths (ages 15-22).  </p>     
                 <ul>
                     <li>Create and implement cohesive instructional framework.</li>
                     <li>Manage, train, and discipline team consisting of 8+ instructors to motivate students and achieve success in a highly competitive environment. </li>
